# discord_channel_bot

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
src/discord_channel_bot/: bot.py  channel.py  message.py  utils.py
