[metadata]
name = discord_channel_bot
version = 0.0.1
author = Christian Bischof
author_email = bischof.christian@gmail.com
description = A channel management bot for discord
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bischofc/discord_channel_bot
project_urls =
    Bug Tracker = https://github.com/bischofc/discord_channel_bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src